# simple_logging

./: .gitignore  README.md  pyproject.toml
simple_logging/: __init__.py  loggers.py
simple_logging/handlers/: abc.py  files.py  streaming.py
tests/: test_loggers.py
