[tool.poetry]
name = "simple-logging"
version = "0.1.0"
description = ""
authors = ["Vince Forgione <vince.4gione@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.0"
pytest-cov = "^2.10.1"
pytest-describe = "^1.0.0"
black = "^20.8b1"
isort = "^5.5.3"
pylint = "^2.6.0"
mypy = "^0.782"

[tool.black]
line-length = 88
target-version = ["py38"]
exclude = """(
  /(
    .git
    | .mypy_cache
    | .pytest_cache
    | __pycache__
    | .devcontainer
    | .vscode
  )/
)"""

[tool.isort]
profile = "black"
src_paths = [
  "simple_logging",
  "tests",
]

[tool.pylint.format]
max-line-length = 1000  # let black handle this

[tool.pylint.MASTER]
ignore = []
load-plugins = []

[tool.pylint."MESSAGE CONTROL"]
disable = [
  "C0103",
  "C0114",
  "R0903",
  "R0913",
  "W0622",
]

[tool.pytest.ini_options]
python_files = [
  "*test_*.py"
]
addopts = [
  "--tb=native",
  "--cov=simple_logging",
  "--cov-report=term-missing"
]

[tool.coverage.run]
omit = []

[tool.coverage.report]
exclude_lines = [
  "coverage: disable",
  "raise NotImplementedError",
  "__str__",
  "__repr__"
]
omit = []

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
